[tool.poetry]
name = "sql-1"
version = "0.1.0"
description = ""
authors = ["ghost <i@nowtiloos.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^69.2.0"
sqlalchemy = "^2.0.28"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
